# ProcIOWatcher

./: .gitignore  LICENSE  README.md  build_native_py_binding.sh  io_watcher.py  io_watcher.service  native_bind.pyx  proc_event_connector.c  proc_events.c  proc_events.pyx  ps_watcher.py  pyproject.toml  requirements.txt  setup.py  task_stats.c  task_stats.pyx
native/: proc_events-bind.pyx  proc_events.c  task_stats-bind.pyx  task_stats.c
src/mirfatif/io_watcher/: io_watcher.py
src/mirfatif/io_watcher/etc/systemd/system/: io_watcher.service
